TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2011-11-09 MickeM
 * Added initial SyslogClient module to allow syuslog forwarding (of passive checks ish)
   Still requires template support and configuration options (mainly PoC right now).
 * Added initial SMTPClient to allow sending messages via SMTP.
   Still requires template support and configuration options (mainly PoC right now).
 * Fixed unicode log issue (still not sure message format is correct)
 * Renamed Message to log in internal wrapper API
 * Fixed issue in settings old (regarding readin new keys, not 100% supported yet)

2011-11-06 MickeM
 * Had some "vacation" so no updates for a while
 * A lot of fixes to the NSCA parts (now 100% compatible with old settings file)
 * Added option to read sections (to plugin API)
 * Fixed issues in settings wrapper so child paths are also mapped (not just keys)
 * Many fixes related to NRPE/NSCA/*
 * "RC quality" expect RC within the week (only need to fix default config file somehow)
 * Upgraded all unit test to use the simplified API
 * Fixed a some unicode issues in PythonScript module
 * Improved threading a bit
 * Fixed CheckSystem (service check)
 * Fixed duplicate keys (when replacing) in old settings client
 
2011-10-21 MickeM
 * Some more threading issues in Python (works perfectly(?) now)
 * Refactored the tests a bit making test suites runable from a central hub
 * Fixed soo everything builds and works on Linux

2011-10-19 MickeM
 * Fixed some threadding issues in PythonScript
 * Still working on refactoring the unittest helpers a bit

2011-10-16 MickeM
 * Fixed issue with loading zero-byte UTF-8 config files
 * Fixed some issues with settings subsystem (debug log as well as createing instances for --generate)