@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,108
-#define STRPRODUCTVER  "0,4,0,108"
-#define STRPRODUCTDATE "2011-11-13"
+#define PRODUCTVER     0,4,0,111
+#define STRPRODUCTVER  "0,4,0,111"
+#define STRPRODUCTDATE "2011-11-14"
 #endif // VERSION_HPP
