@@ -1,3 +1,3 @@
 version=0.4.0
-build=108
-date=2011-11-13
+build=111
+date=2011-11-14
